Bug 104658 - Chart bars shrink and jump up on applying bitmap fill
Summary: Chart bars shrink and jump up on applying bitmap fill
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Chart (show other bugs)
Version:
(earliest affected)
5.4.0.0.alpha0+
Hardware: All Linux (All)
: medium normal
Assignee: Katarina Behrens (Inactive)
URL:
Whiteboard: target:6.1.0 target:6.0.5
Keywords:
: 114132 (view as bug list)
Depends on:
Blocks: Chart Object-Fill
  Show dependency treegraph
 
Reported: 2016-12-13 22:26 UTC by Katarina Behrens (Inactive)
Modified: 2018-05-22 15:34 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Katarina Behrens (Inactive) 2016-12-13 22:26:56 UTC
Yet another regression from the infamous GSoC project

1. Open any column chart, for example attachment 121237 [details]
2. Select a data series (any), then Format Data Series > Area
3. Bonk 'Bitmap' button and select one of the bitmaps

Expected: Chart bars will get the selected bitmap fill and stay where they were

Actual: Odd things happen to chart bars. Depending on their value, sometimes they get narrower and shorter. Sometimes they move upwards. Sometimes both.
Comment 1 Xisco Faulí 2016-12-14 00:27:00 UTC
Confirmed in

Version: 5.4.0.0.alpha0+
Build ID: 634589b340316ba64b731b4d923c1056be415494
CPU Threads: 4; OS Version: Linux 4.8; UI Render: default; VCL: gtk3; 
Locale: ca-ES (ca_ES.UTF-8); Calc: group
Comment 2 Katarina Behrens (Inactive) 2018-04-09 12:27:21 UTC
*** Bug 114132 has been marked as a duplicate of this bug. ***
Comment 3 Commit Notification 2018-04-09 20:06:45 UTC
Katarina Behrens committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=2eaa978d135a53abf22df2dc3fcb8d04733fe2d3

tdf#104658: Fix jumping bitmap-filled chart bars

It will be available in 6.1.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 4 Commit Notification 2018-05-22 15:34:38 UTC
Katarina Behrens committed a patch related to this issue.
It has been pushed to "libreoffice-6-0":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=4eed0937c971a21287da639e0708c682d0241ea2&h=libreoffice-6-0

tdf#104658: Fix jumping bitmap-filled chart bars

It will be available in 6.0.5.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.