tdf#104658: Fix jumping bitmap-filled chart bars

Coincidentally this also resolves almost identical issues in chart wall
(tdf#114132)

Change-Id: Ib566110639d00aa46463ee592861ce3e15c64f50
Reviewed-on: https://gerrit.libreoffice.org/52624
Tested-by: Jenkins <ci@libreoffice.org>
Reviewed-by: Katarina Behrens <Katarina.Behrens@cib.de>